--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,27 +2,32 @@
     <string name="app_name">HunterCaravanTabletUygulamasii</string>
     <!-- TODO: Remove or change this placeholder text -->
 
-    <string name="tarih">TARİH</string>
-    <string name="kullanici_uygulama_ayarlari">KULLANICI UYGULAMA AYARLARI</string>
-    <string name="diagnostikmenu">DİAGNOSTİK MENÜ</string>
-    <string name="buton01">BUTON 01</string>
-    <string name="buton07">BUTON 07</string>
-    <string name="buton_13">BUTON 13</string>
-    <string name="buton_02">BUTON 02</string>
-    <string name="buton_08">BUTON 08</string>
-    <string name="buton_14">BUTON 14</string>
-    <string name="buton_03">BUTON 03</string>
-    <string name="buton_09">BUTON 09</string>
-    <string name="buton_15">BUTON 15</string>
-    <string name="buton_04">BUTON 04</string>
-    <string name="buton_10">BUTON 10</string>
-    <string name="buton_16">BUTON 16</string>
-    <string name="buton_05">BUTON 05</string>
-    <string name="buton_11">BUTON 11</string>
-    <string name="buton_17">BUTON 17</string>
-    <string name="buton_06">BUTON 06</string>
-    <string name="buton_12">BUTON 12</string>
-    <string name="buton_18">BUTON 18</string>
+    <string-array name="languages" translatable="false">
+        <item>en</item>
+        <item>ta</item>
+    </string-array>
+
+    <string name="tarih">DATE</string>
+    <string name="kullanici_uygulama_ayarlari">USER APPLICATION SETTİNGS</string>
+    <string name="diagnostikmenu">DIAGNOSTIC MENU</string>
+    <string name="buton01">BUTTON 01</string>
+    <string name="buton07">BUTTON 07</string>
+    <string name="buton_13">BUTTON 13</string>
+    <string name="buton_02">BUTTON 02</string>
+    <string name="buton_08">BUTTON 08</string>
+    <string name="buton_14">BUTTON 14</string>
+    <string name="buton_03">BUTTON 03</string>
+    <string name="buton_09">BUTTON 09</string>
+    <string name="buton_15">BUTTON 15</string>
+    <string name="buton_04">BUTTON 04</string>
+    <string name="buton_10">BUTTON 10</string>
+    <string name="buton_16">BUTTON 16</string>
+    <string name="buton_05">BUTTON 05</string>
+    <string name="buton_11">BUTTON 11</string>
+    <string name="buton_17">BUTTON 17</string>
+    <string name="buton_06">BUTTON 06</string>
+    <string name="buton_12">BUTTON 12</string>
+    <string name="buton_18">BUTTON 18</string>
     <string name="led_01">LED 01</string>
     <string name="led_07">LED 07</string>
     <string name="led_13">LED 13</string>
@@ -39,65 +44,74 @@
     <string name="led_11">LED 11</string>
     <string name="led_06">LED 06</string>
     <string name="led_12">LED 12</string>
-    <string name="kaydet">KAYDET</string>
-    <string name="gel_m_uygulama_ayarlari">GELİŞMİŞ UYGULAMA AYARLARI</string>
-    <string name="cihazi_etkinlestir">CİHAZI ETKİNLEŞTİR</string>
-    <string name="kirlisugostergesi">KİRLİ SU GÖSTERGESİ</string>
-    <string name="denge_sistemi">DENGE SİSTEMİ</string>
-    <string name="kaydett">KAYDET</string>
-    <string name="bluetootheslestirme">BLUETOOTH EŞLEŞTİRME</string>
-    <string name="diagnostikmenuu">DİAGNOSTİK MENÜ</string>
-    <string name="kontrol_akimi_karti">KONTROL AKIMI KARTI</string>
-    <string name="ana_sayfa">Ana Sayfa</string>
-    <string name="ayarlar">Ayarlar</string>
-    <string name="aydinlatma">Aydınlatma</string>
-    <string name="denge_sistemii">Denge Sistemi</string>
-    <string name="enerji">Enerji</string>
-    <string name="aku">AKÜ</string>
-    <string name="temiz_su">TEMİZ SU</string>
-    <string name="gun">CUMARTESİ</string>
-    <string name="aku_gerilim">AKÜ GERİLİMİ</string>
-    <string name="atik_su">ATIK SU</string>
-    <string name="sicaklik">İÇ SICAKLIK</string>
-    <string name="dis_sicaklik">DIŞ SICAKLIK</string>
+    <string name="kaydet">SAVE</string>
+    <string name="gel_m_uygulama_ayarlari">ADVANCED APPLICATION SETTINGS</string>
+    <string name="cihazi_etkinlestir">ACTIVATE THE DEVICE</string>
+    <string name="kirlisugostergesi">GREY WATER INDICATOR</string>
+    <string name="denge_sistemi">BALANCE SYSTEM</string>
+    <string name="kaydett">SAVE</string>
+    <string name="bluetootheslestirme">" BLUETOOTH PAIRING"</string>
+    <string name="diagnostikmenuu">DIAGNOSTIC MENU</string>
+    <string name="kontrol_akimi_karti">CURRENT CONTROL CARD</string>
+    <string name="ana_sayfa">Main Page</string>
+    <string name="ayarlar">Settings</string>
+    <string name="aydinlatma">Lighting</string>
+    <string name="denge_sistemii">Balance System</string>
+    <string name="enerji">Energy</string>
+    <string name="aku">Battery</string>
+    <string name="temiz_su">FRESH WATER</string>
+    <string name="gun">Saturday</string>
+    <string name="aku_gerilim">BATTERY VOLTAGE</string>
+    <string name="atik_su">"GREY WATER "</string>
+    <string name="sicaklik">ROOM TEMPERATURE</string>
+    <string name="dis_sicaklik">AMBIENT TEMPERATURE</string>
     <string name="v">V</string>
     <string name="derece">°C</string>
-    <string name="ay">Mayıs</string>
+    <string name="ay">May</string>
     <string name="yil">2023</string>
-    <string name="kullanici_adi">Kullanıcı Adı</string>
-    <string name="sifre">Şifre</string>
-    <string name="giris_yap">GİRİŞ YAP</string>
-    <string name="yatak_odasi_isiklari_2">YATAK ODASI IŞIKLARI (2)</string>
-    <string name="oturma_alani_isiklarilari">OTURMA ALANI IŞIKLARI L/R)</string>
-    <string name="mutfak_tavan_isiklari">MUTFAK TAVAN IŞIKLARI</string>
-    <string name="yatak_odasi_isiklari_1">YATAK ODASI IŞIKLARI (1)</string>
-    <string name="oturma_alani_isiklari_m">OTURMA ALANI IŞIKLARI (M)</string>
-    <string name="ic_aydinlatmalar">İÇ AYDINLATMALAR</string>
-    <string name="dis_aydinlatmalar">DIŞ AYDINLATMALAR</string>
-    <string name="mutfak_isiklari">MUTFAK IŞIKLARI</string>
-    <string name="dis_isiklar_sol">DIŞ IŞIKLAR (SOL)</string>
-    <string name="dis_isiklari_on">DIŞ IŞIKLARI (ÖN)</string>
-    <string name="park_isiklari_sag">PARK IŞIKLARI (SAĞ)</string>
-    <string name="dis_isiklar_sag">DIŞ IŞIKLAR (SAĞ)</string>
-    <string name="dis_isiklar_arka">DIŞ IŞIKLAR (ARKA)</string>
-    <string name="park_isiklari_sol">PARK IŞIKLARI (SOL)</string>
-    <string name="kompresor">KOMPRESÖR</string>
-    <string name="sag">SAĞ</string>
-    <string name="sol">SOL</string>
-    <string name="akuu">AKÜ</string>
-    <string name="gunes_paneli">GÜNEŞ PANELİ</string>
-    <string name="aku_gerilimi">AKÜ GERİLİMİ</string>
-    <string name="panel_gerilimi">PANEL GERİLİMİ</string>
-    <string name="temiz_suu">TEMİZ SU</string>
-    <string name="atik_suu">ATIK SU</string>
-    <string name="sicaklik_ve_nem">SICAKLIK VE NEM</string>
-    <string name="ic_sicaklik">İÇ SICAKLIK</string>
-    <string name="diss_sicaklik">DIŞ SICAKLIK</string>
-    <string name="ic_nem">İÇ NEM</string>
-    <string name="usb_kullanimi">USB KULLANIMI</string>
-    <string name="hidrofor">HİDROFOR</string>
-    <string name="acik">AÇIK</string>
-    <string name="kapali">KAPALI</string>
-    <string name="gostergeler">Göstergeler</string>
-    <string name="kontroller">Kontroller</string>
+    <string name="kullanici_adi">User Name</string>
+    <string name="sifre">Password</string>
+    <string name="giris_yap">LOG IN</string>
+    <string name="yatak_odasi_isiklari_2">BEDROOM LIGHTS (2)</string>
+    <string name="oturma_alani_isiklarilari">SEATING AREA LIGHTS L/R</string>
+    <string name="mutfak_tavan_isiklari">KITCHEN CEILING LIGHTS</string>
+    <string name="yatak_odasi_isiklari_1">BEDROOM LIGHTS (1)</string>
+    <string name="oturma_alani_isiklari_m">SEATING AREA LIGHTS (M)</string>
+    <string name="ic_aydinlatmalar">INTERIOR LIGHTS</string>
+    <string name="mutfak_isiklari">KITCHEN LIGHTS</string>
+    <string name="dis_isiklar_sol">EXTERIOR LIGHTS (LEFT)</string>
+    <string name="dis_isiklari_on">EXTERIOR LIGHTS (FRONT)</string>
+    <string name="park_isiklari_sag">PARKING LIGHTS (RIGHT)</string>
+    <string name="dis_isiklar_sag">EXTERIOR LIGHTS (RIGHT)</string>
+    <string name="dis_isiklar_arka">EXTERIOR LIGHTS (BACK)</string>
+    <string name="park_isiklari_sol">EXTERIOR LIGHTS (LEFT)</string>
+    <string name="sag">RIGHT</string>
+    <string name="sol">LEFT</string>
+    <string name="akuu">BATTERY</string>
+    <string name="gunes_paneli">SOLAR PANEL</string>
+    <string name="aku_gerilimi">BATTERY VOLTAGE</string>
+    <string name="panel_gerilimi">PANEL VOLTAGE</string>
+    <string name="temiz_suu">FRESH WATER</string>
+    <string name="atik_suu">GREY WATER</string>
+    <string name="sicaklik_ve_nem">TEMPERATURE AND HUMIDITY</string>
+    <string name="ic_sicaklik">ROOM TEMPERATURE</string>
+    <string name="diss_sicaklik">AMBIENT TEMPERATURE</string>
+    <string name="ic_nem">ROOM HUMIDITY</string>
+    <string name="usb_kullanimi">USB USE</string>
+    <string name="hidrofor">WATER BOOSTER</string>
+    <string name="acik">SWITCHED ON</string>
+    <string name="kapali">SWITCHED OFF</string>
+    <string name="gostergeler">Indicators</string>
+    <string name="kontroller">Controller</string>
+
+    <string name="dis_aydinlatmalar">EXTERIOR LIGHTS</string>
+    <string name="uyku_modunu_ayarla">SET SLEEP MODE</string>
+    <string name="nem_set_n_ayarla">SET HUMIDITY SET</string>
+    <string name="gel_m_ayarlar">ADVANCED SETTINGS</string>
+    <string name="kaydettt">SAVE</string>
+    <string name="aray_z_d_l">INTERFACE LANGUAGE</string>
+    <string name="kullanici_ayar">RETURN TO USER SETTINGS</string>
+    <string name="kompresor">COMPRESSOR</string>
+    <string name="s_stem_saat">SYSTEM CLOCK</string>
+
 </resources>
