language text edited int strings

--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -106,7 +106,7 @@
 
     <string name="gel_m_ayarlar">ERWEITERTE EINSTELLUNGEN</string>
     <string name="kaydettt">SPEICHERN</string>
-    <string name="aray_z_d_l">SCHNITTSTELLENSPRACHE</string>
+    <string name="aray_z_d_l">SPRACHE</string>
     <string name="kullanici_ayar">BENUTZEREINSTELLUNGEN</string>
     <string name="s_stem_saat">SYSTEM UHR</string>
 
