--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -105,7 +105,7 @@
     <string name="nem_set_n_ayarla">NEM SETİNİ AYARLA</string>
     <string name="gel_m_ayarlar">GELİŞMİŞ AYARLAR</string>
     <string name="kaydettt">KAYDET</string>
-    <string name="aray_z_d_l">ARAYÜZ DİLİ</string>
+    <string name="aray_z_d_l">DİL</string>
     <string name="kullanici_ayar">KULLANICI AYARLARINA GERİ GÖN</string>
     <string name="s_stem_saat">SİSTEM SAATİ</string>
 
