--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,7 +109,7 @@
     <string name="nem_set_n_ayarla">SET HUMIDITY SET</string>
     <string name="gel_m_ayarlar">ADVANCED SETTINGS</string>
     <string name="kaydettt">SAVE</string>
-    <string name="aray_z_d_l">INTERFACE LANGUAGE</string>
+    <string name="aray_z_d_l">LANGUAGE</string>
     <string name="kullanici_ayar">RETURN TO USER SETTINGS</string>
     <string name="kompresor">COMPRESSOR</string>
     <string name="s_stem_saat">SYSTEM CLOCK</string>
