--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -108,5 +108,6 @@
     <string name="aray_z_d_l">DİL</string>
     <string name="kullanici_ayar">KULLANICI AYARLARINA GERİ GÖN</string>
     <string name="s_stem_saat">SİSTEM SAATİ</string>
+    <string name="otomat_k_ayarla">OTOMATİK AYARLA</string>
 
 </resources>
