--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -109,5 +109,7 @@
     <string name="kullanici_ayar">KULLANICI AYARLARINA GERİ GÖN</string>
     <string name="s_stem_saat">SİSTEM SAATİ</string>
     <string name="otomat_k_ayarla">OTOMATİK AYARLA</string>
+    <string name="dakika">Dakika</string>
+    <string name="Kaydedildi">Kaydedildi</string>
 
 </resources>
