--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -110,5 +110,8 @@
     <string name="kullanici_ayar">BENUTZEREINSTELLUNGEN</string>
     <string name="s_stem_saat">SYSTEM UHR</string>
     <string name="otomat_k_ayarla">AUTOMATİSCH  EINGESTELLT</string>
+    <string name="dakika">Minuten</string>
+    <string name="Kaydedildi">Aufgezeichnet</string>
+
 
 </resources>
