almanca stringler güncellendi

--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -49,7 +49,7 @@
     <string name="bluetootheslestirme">BLUETOOTH-PAIRING</string>
     <string name="diagnostikmenuu">DIAGNOSEMENÜ</string>
     <string name="kontrol_akimi_karti">STEUERSTROMKARTE</string>
-    <string name="ana_sayfa">Hauptseıte</string>
+    <string name="ana_sayfa">Home</string>
     <string name="ayarlar">Einstellungen</string>
     <string name="aydinlatma">Beleuchtung</string>
     <string name="denge_sistemii">Balance System</string>
@@ -68,46 +68,46 @@
     <string name="kullanici_adi">NUTZERNAME</string>
     <string name="sifre">PASSWORT</string>
     <string name="giris_yap">LOG IN</string>
-    <string name="yatak_odasi_isiklari_2">SCHLAFZIMMERLEUCHTEN (2)</string>
-    <string name="oturma_alani_isiklarilari">SITZBEREICHSBELEUCHTUNG L/R</string>
-    <string name="mutfak_tavan_isiklari">KÜCHENDECKENLEUCHTEN</string>
-    <string name="yatak_odasi_isiklari_1">SCHLAFZIMMERLEUCHTEN (1)</string>
-    <string name="oturma_alani_isiklari_m">SITZBEREICHSLEUCHTEN (M)</string>
+    <string name="yatak_odasi_isiklari_2">SCHLAFZIMMER (2)</string>
+    <string name="oturma_alani_isiklarilari">ESSEN L/R</string>
+    <string name="mutfak_tavan_isiklari">KÜCHEOBEN</string>
+    <string name="yatak_odasi_isiklari_1">SCHLAFZIMMER (1)</string>
+    <string name="oturma_alani_isiklari_m">ESSEN (M)</string>
     <string name="ic_aydinlatmalar">INNENBELEUCHTUNG</string>
     <string name="kontroller">Regler</string>
-    <string name="mutfak_isiklari">KÜCHENLEUCHTEN</string>
-    <string name="dis_isiklar_sol">AUSSENLEUCHTEN (LINKS)</string>
-    <string name="dis_isiklari_on">AUSSENLEUCHTEN (VORNE)</string>
-    <string name="park_isiklari_sag">PARKLICHT (RECHTS)</string>
+    <string name="mutfak_isiklari">KÜCHE</string>
+    <string name="dis_isiklar_sol">LINKS</string>
+    <string name="dis_isiklari_on">VORNE</string>
+    <string name="park_isiklari_sag">RECHTS</string>
     <string name="dis_isiklar_sag">AUSSENLEUCHTEN (RECHTS)</string>
-    <string name="dis_isiklar_arka">AUSSENLEUCHTEN (HINTEN)</string>
+    <string name="dis_isiklar_arka">HINTEN</string>
     <string name="park_isiklari_sol">AUSSENLEUCHTEN (LINKS)</string>
     <string name="kompresor">KOMPRESSOR</string>
     <string name="sag">RECHTS</string>
     <string name="sol">LINKS</string>
     <string name="akuu">BATTERIE</string>
     <string name="gunes_paneli">SOLAR PANEL</string>
-    <string name="aku_gerilimi">BATTERIESPANNUNG</string>
-    <string name="panel_gerilimi">PANELSPANNUNG</string>
+    <string name="aku_gerilimi">SPANNUNG</string>
+    <string name="panel_gerilimi">SPANNUNG</string>
     <string name="temiz_suu">FRISCHWASSER</string>
     <string name="atik_suu">ABWASSER</string>
     <string name="sicaklik_ve_nem">TEMPERATUR UND LUFTFEUCHTIGKEIT</string>
-    <string name="ic_sicaklik">ZIMMERTEMPERATUR</string>
-    <string name="diss_sicaklik">UMGEBUNGSTEMPERATUR</string>
+    <string name="ic_sicaklik">INNERTEMPERATUR</string>
+    <string name="diss_sicaklik">AUSSENTEMPERATUR</string>
     <string name="ic_nem">RAUMFEUCHTIGKEIT</string>
     <string name="usb_kullanimi">USB-NUTZUNG</string>
-    <string name="hidrofor">HYDROPHOR</string>
+    <string name="hidrofor">WASSERPUMPE</string>
     <string name="acik">EIN</string>
     <string name="kapali">AUS</string>
     <string name="gostergeler">Indikatoren</string>
-    <string name="dis_aydinlatmalar">AUSSENLEUCHTEN</string>
+    <string name="dis_aydinlatmalar">AUSSENBELEUCHTUNG</string>
     <string name="uyku_modunu_ayarla">RUHEMODUS EINSTELLEN</string>
     <string name="nem_set_n_ayarla">FEUCHTIGKEIT EINSTELLEN</string>
 
     <string name="gel_m_ayarlar">ERWEITERTE EINSTELLUNGEN</string>
     <string name="kaydettt">SPEICHERN</string>
     <string name="aray_z_d_l">SPRACHE</string>
-    <string name="kullanici_ayar">BENUTZEREINSTELLUNGEN</string>
+    <string name="kullanici_ayar">EINSTELLUNGEN</string>
     <string name="s_stem_saat">SYSTEM UHR</string>
     <string name="otomat_k_ayarla">AUTOMATİSCH  EINGESTELLT</string>
     <string name="dakika">Minuten</string>
