--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,7 +106,7 @@
 
     <string name="dis_aydinlatmalar">EXTERIOR LIGHTS</string>
     <string name="uyku_modunu_ayarla">SET SLEEP MODE</string>
-    <string name="nem_set_n_ayarla">SET HUMIDITY SET</string>
+    <string name="nem_set_n_ayarla">HUMIDITY SET</string>
     <string name="gel_m_ayarlar">ADVANCED SETTINGS</string>
     <string name="kaydettt">SAVE</string>
     <string name="aray_z_d_l">LANGUAGE</string>
