enerji fragment update

--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -112,6 +112,7 @@
     <string name="otomat_k_ayarla">AUTOMATİSCH  EINGESTELLT</string>
     <string name="dakika">Minuten</string>
     <string name="Kaydedildi">Aufgezeichnet</string>
+    <string name="panelakimi">PANEL STROM </string>
 
 
 </resources>
