--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -111,5 +111,5 @@
     <string name="otomat_k_ayarla">OTOMATİK AYARLA</string>
     <string name="dakika">Dakika</string>
     <string name="Kaydedildi">Kaydedildi</string>
-
+    <string name="panelakimi">PANEL AKIMI </string>
 </resources>
