--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,6 +117,5 @@
     <string name="dakika">Minute</string>
     <string name="Kaydedildi">Saved</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-
+<string name="panelakimi">PANEL CURRENT </string>
 </resources>
