--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,4 +118,6 @@
     <string name="Kaydedildi">Saved</string>
     <!-- TODO: Remove or change this placeholder text -->
 <string name="panelakimi">PANEL CURRENT </string>
+    <string name="never">Never</string>
+    <string name="iptal">CANCEL</string>
 </resources>
