--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -101,7 +101,7 @@
     <string name="kapali">KAPALI</string>
     <string name="gostergeler">Göstergeler</string>
     <string name="kontroller">Aygıt Kontrol</string>
-    <string name="uyku_modunu_ayarla">UYKU MODUNU AYARLA</string>
+    <string name="uyku_modunu_ayarla">EKRAN ZAMAN AŞIMI</string>
     <string name="nem_set_n_ayarla">NEM SETİNİ AYARLA</string>
     <string name="gel_m_ayarlar">YÖNETİCİ AYARLARI</string>
     <string name="kaydettt">KAYDET</string>
