--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -68,20 +68,20 @@
     <string name="kullanici_adi">Kullanıcı Adı</string>
     <string name="sifre">Şifre</string>
     <string name="giris_yap">GİRİŞ YAP</string>
-    <string name="yatak_odasi_isiklari_2">YATAK ODASI IŞIKLARI (2)</string>
-    <string name="oturma_alani_isiklarilari">OTURMA ALANI IŞIKLARI L/R)</string>
-    <string name="mutfak_tavan_isiklari">MUTFAK TAVAN IŞIKLARI</string>
-    <string name="yatak_odasi_isiklari_1">YATAK ODASI IŞIKLARI (1)</string>
-    <string name="oturma_alani_isiklari_m">OTURMA ALANI IŞIKLARI (M)</string>
+    <string name="yatak_odasi_isiklari_2">YATAK ODASI (2)</string>
+    <string name="oturma_alani_isiklarilari">OTURMA ALANI (L/R)</string>
+    <string name="mutfak_tavan_isiklari">MUTFAK TAVAN</string>
+    <string name="yatak_odasi_isiklari_1">YATAK ODASI (1)</string>
+    <string name="oturma_alani_isiklari_m">OTURMA ALANI (M)</string>
     <string name="ic_aydinlatmalar">İÇ AYDINLATMALAR</string>
     <string name="dis_aydinlatmalar">DIŞ AYDINLATMALAR</string>
-    <string name="mutfak_isiklari">MUTFAK IŞIKLARI</string>
-    <string name="dis_isiklar_sol">DIŞ IŞIKLAR (SOL)</string>
-    <string name="dis_isiklari_on">DIŞ IŞIKLARI (ÖN)</string>
-    <string name="park_isiklari_sag">PARK IŞIKLARI (SAĞ)</string>
-    <string name="dis_isiklar_sag">DIŞ IŞIKLAR (SAĞ)</string>
-    <string name="dis_isiklar_arka">DIŞ IŞIKLAR (ARKA)</string>
-    <string name="park_isiklari_sol">PARK IŞIKLARI (SOL)</string>
+    <string name="mutfak_isiklari">MUTFAK</string>
+    <string name="dis_isiklar_sol">SOL</string>
+    <string name="dis_isiklari_on">ÖN</string>
+    <string name="park_isiklari_sag">SAĞ PARKLAR</string>
+    <string name="dis_isiklar_sag">SAĞ</string>
+    <string name="dis_isiklar_arka">ARKA</string>
+    <string name="park_isiklari_sol">SOL PARKLAR</string>
     <string name="kompresor">KOMPRESÖR</string>
     <string name="sag">SAĞ</string>
     <string name="sol">SOL</string>
@@ -95,7 +95,7 @@
     <string name="ic_sicaklik">İÇ SICAKLIK</string>
     <string name="diss_sicaklik">DIŞ SICAKLIK</string>
     <string name="ic_nem">İÇ NEM</string>
-    <string name="usb_kullanimi">USB KULLANIMI</string>
+    <string name="usb_kullanimi">USB</string>
     <string name="hidrofor">HİDROFOR</string>
     <string name="acik">AÇIK</string>
     <string name="kapali">KAPALI</string>
@@ -107,7 +107,7 @@
     <string name="kaydettt">KAYDET</string>
     <string name="aray_z_d_l">DİL</string>
     <string name="kullanici_ayar">KULLANICI AYARLARINA GERİ GÖN</string>
-    <string name="s_stem_saat">SİSTEM SAATİ</string>
+    <string name="s_stem_saat">SAAT</string>
     <string name="otomat_k_ayarla">OTOMATİK AYARLA</string>
     <string name="dakika">Dakika</string>
     <string name="Kaydedildi">Kaydedildi</string>
